[package]
name = "lioness-blockcipher"
version = "0.1.0"
edition = "2024"
description = "LIONESS large-block cipher using RustCrypto ChaCha20 and BLAKE2 with TurboSHAKE as KDF"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
blake2 = "0.10"
chacha20 = "0.10"
sha3 = "0.11.0"
zeroize = { version = "1", features = ["zeroize_derive"] }
