[package]
name = "lioness-blockcipher"
version = "0.1.0"
edition = "2024"
description = "LIONESS large-block cipher using RustCrypto ChaCha20 and BLAKE2 with TurboSHAKE as KDF"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
blake2 = "0.11.0-pre.4"
chacha20 = "0.10.0-pre.3"
turboshake = "0.6.0"
aes = "0.9.0-pre.2"
ctr = "0.10.0-pre.2"
sha2 = "0.11.0-pre.4"
sha3 = "0.11.0-pre.4"
hmac = "0.13.0-pre.4"
hkdf = "0.13.0-pre.4"
zeroize = { version = "1", features = ["zeroize_derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
